--- a/config/database.yml
+++ b/config/database.yml
@@ -8,7 +8,7 @@ development:
   username: root
   password:
   host: localhost
-  database: furima-46825_development
+  database: furima_46825_development
 
 test:
   <<: *default
@@ -16,7 +16,7 @@ test:
   username: root
   password:
   host: localhost
-  database: furima-46825_test
+  database: furima_46825_test
 
 production:
   <<: *default
