--- a/config/storage.yml
+++ b/config/storage.yml
@@ -12,7 +12,9 @@ amazon:
   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
   region: ap-northeast-1 
   bucket: furima46825 
+  <% if Rails.env.development? %>
   ssl_ca_bundle: '/home/hachi/cacert.pem'
+  <% end %>
 
 # Use bin/rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
